--- a/build
+++ b/build
@@ -183,7 +183,8 @@ readonly RUN_ARGS="$@"
 	echo "    gcc-14.1.0 (14.1.0 release)"
 	echo "    gcc-14.2.0 (14.2.0 release)"
 	echo "    gcc-14-branch (currently 14.2.1-prerelease)"
-	echo "    gcc-trunk (currently 15.0.0-snapshot)"
+	echo "    gcc-15-branch (currently 15.0.1-prerelease)"
+	echo "    gcc-trunk (currently 16.0.0-snapshot)"
 
 	exit 0
 }
